--- a/src/index.css
+++ b/src/index.css
@@ -1,81 +1,17 @@
+/* Reset default browser padding and margin */
+html,
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
-
-* {
-  margin: 0px;
-}
-
-.hide-vertical-scrollbar {
-  overflow-x: auto;
-  overflow-y: auto;
-}
-
-.hide-vertical-scrollbar .ReactVirtualized__Grid {
-  overflow-y: scroll !important;
-  -ms-overflow-style: none !important;
-  scrollbar-width: none !important;
-}
-
-.hide-vertical-scrollbar .ReactVirtualized__Table__headerRow {
-  overflow-x: auto;
-}
-
-.hide-vertical-scrollbar .ReactVirtualized__Table__row {
-  overflow-y: hidden;
-}
-
-.hide-vertical-scrollbar::-webkit-scrollbar {
-}
-
-input[type="range"] {
+  padding: 0;
+  box-sizing: border-box; /* Ensure consistent box-sizing */
   width: 100%;
-  -webkit-appearance: none;
-  appearance: none;
-  height: 8px;
-  background: #ddd;
-  border-radius: 5px;
-  outline: none;
-  transition: background 0.3s ease;
+  height: 100%;
 }
 
-input[type="range"]:focus {
-  background: #ccc;
-}
-
-input[type="range"]::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  appearance: none;
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  background: #4caf50;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-input[type="range"]::-moz-range-thumb {
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  background: #4caf50;
-  cursor: pointer;
-}
-
-input[type="range"]::-webkit-slider-thumb:hover {
-  background-color: #45a049;
-}
-
-input[type="range"]::-moz-range-thumb:hover {
-  background-color: #45a049;
+*,
+*::before,
+*::after {
+  box-sizing: inherit; /* Inherit box-sizing for all elements */
+  padding: 0;
+  margin: 0;
 }
